--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
   <tr>
 <center><td><img src="r2.jpeg" height="400"></a></td></center>
 <center><td><img src="br.jpg" width="300"></td></center>
-<center><td><img src="r3.png" height="400" ></a></td></center>
+<center><td><img src="r3.jpeg" height="400" ></a></td></center>
 <center><td><img src="r1.jpeg" height="400"></td></center>
+<center><td><img src="r4.png" height="400"></td></center>
   </tr>
 </table></p>
 </center>
